@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2022 Antti Ajanki
 Distributed under the GPL v3 or later
 
+<unreleased>
+
+- Full series download on Swedish language arenan.yle.fi fixed
+
 Version 20221111
 
 - Fixed some geo-blocking related failures
